--- a/local.yml
+++ b/local.yml
@@ -7,3 +7,7 @@ proxies:
     type: http
     server: 192.168.3.144
     port: 7890
+  - name: "PC0612"
+    type: http
+    server: 192.168.3.127
+    port: 1080
